Removed 204 response for roles
