# src/management-system/src/backend/openapi.json
@@ -1153,20 +1153,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/roleResponse"
-                }
-              }
-            }
-          },
-          "204": {
-            "description": "No Content",
-            "content": {
-              "application/json": {
-                "schema": {
                   "type": "array",
-                  "minItems": 0,
-                  "maxItems": 0,
-                  "items": {}
+                  "items": {
+                    "$ref": "#/components/schemas/roleResponse"
+                  }
                 }
               }
             }
